--- a/static/index.html
+++ b/static/index.html
@@ -243,6 +243,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/translations/en.js"></script>
+    <script src="/static/translations/ru.js"></script>
     <script src="/static/js/app.js"></script>
 </body>
 
